--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <variable
+            name="sharedViewModel"
+            type="com.rustyrobot.todo.fragments.SharedViewModel" />
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/listLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -13,8 +23,8 @@
             android:id="@+id/recyclerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:paddingTop="8dp"
             android:clipToPadding="false"
+            android:paddingTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -27,6 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/no_data"
+            android:emptyDatabase="@{sharedViewModel.emptyDatabase}"
             android:src="@drawable/no_data"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -42,6 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
             android:alpha="0.5"
+            android:emptyDatabase="@{sharedViewModel.emptyDatabase}"
             android:text="@string/no_data"
             android:textSize="16sp"
             android:visibility="invisible"
@@ -58,6 +70,7 @@
             android:clickable="true"
             android:contentDescription="@string/add"
             android:focusable="true"
+            android:navigateToAddFragment="@{true}"
             android:src="@drawable/add"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
